# Tests-Function-Api-Calling-OpenAi

./: .gitignore  Dockerfile  README.md  action.yml  allurerc.yaml  deprecated_runnner.py  index.html  learning.py  pyproject.toml  pytest.ini  requirements.txt  runner.py
allure-pytests/: 006731ad-a786-4d1a-9bc5-5bc0ad53258d-container.json  007f024b-7536-4936-9c0c-a71add2e9c02-container.json  017e6755-0af9-46ce-87dc-a36cf95330cc-container.json  0270a178-7a85-4b36-88dd-b67b3ac093e3-container.json  02baab07-497c-49fa-b2f8-de41a33a6047-container.json  02bb07bb-cc62-4087-8b69-5bb85a55c25b-container.json  02f7c781-8a4c-4a6f-9fce-2231c7230c11-container.json  03bc372d-35b3-44ca-a493-16bdc0f6f1af-container.json  069e17ec-2189-4046-ab7b-2a14b7ec375c-container.json  06c7479e-91a0-4025-9b44-924d3bb80827-container.json  06f0cd87-72a3-45b1-adcb-0c405959bd4c-container.json  07e7659b-9024-449f-84c5-ee6856289670-container.json  0abde47a-b2b1-4f8a-a258-f37f592d3542-result.json  0d81b7d4-ee64-41e3-8173-07ebf36eeda1-container.json  0e017060-1633-4b14-a9ea-fd7a0f73fc99-container.json  0ed10786-a017-4899-b1b3-bc3bc0e64f72-container.json  0f2d034a-8e2c-4ebd-9194-33b06039c1ac-container.json  108731f1-a093-4e06-88fe-5b138860775b-container.json  10f2bdef-1581-469e-bc34-ced090397973-container.json  11566f03-0b03-477e-9338-34277bb4b093-container.json  137f9cb8-c8b3-45fb-9aec-89f7431370a5-container.json  1691d97c-e148-4ee6-a754-08df9540cd2d-container.json  1799bac3-2d03-4660-8b88-d8758694a84d-attachment.txt  18b0e360-4d5b-4105-ab79-0606816689df-container.json  1d3c2a48-83a4-470b-8e28-2328fa50caa1-container.json  20ac025c-bb5b-42a8-a850-845ba482e16f-container.json  21c8c46d-e7a1-4d93-b86a-3937c64d1eae-container.json  23c4a009-7be8-46df-8663-f947cc72be74-container.json  2480b303-ebe4-4a0b-8d63-06e486d3c658-container.json  24fcd3c8-9d4e-4aef-940d-2c207324800e-attachment.json  25f49cad-206b-4ae8-9222-bf8d1537f9df-container.json  26e9e61a-bd6c-40f4-bdd0-b061df78ee51-result.json  290a4f07-18aa-49f1-a780-d9a44558e6a4-container.json  29b8d609-2389-49b4-91c7-7d8ed016547a-attachment.json  2ac7d9ab-6382-4f18-9499-e548feb2f27c-container.json  2ad6bc6f-731f-4e93-8781-55718e9b785a-container.json  2b9916cb-71d9-4563-81cc-9d92eb1a45b7-result.json  2bb25271-10d5-450a-b313-01a94b1c85f2-container.json  2c330a71-ecac-4751-88af-fc77ea9525ed-container.json  2d5c4366-7a61-478c-8549-ad1d45256473-container.json  (+227 more)
(+1097 files in other folders)
